<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input1"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/etInput1"
        app:layout_constraintBottom_toTopOf="@id/etInput1"/>
    <EditText
        android:id="@+id/etInput1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="numberDecimal|numberSigned"
        android:padding="5dp"
        android:gravity="center"
        android:background="@drawable/background"
        android:layout_margin="60dp"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        android:layout_marginTop="5dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etInput1">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/percentage"
            android:checked="true"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_value"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage_value"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="@id/radioGroup"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"/>

    <EditText
        android:id="@+id/etPercentage"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_margin="17dp"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        android:text="@string/default_value"
        android:background="@drawable/background"
        android:gravity="center"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPercentage"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flatBtn1_remove"
        android:layout_marginTop="15dp"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_remove_black"
        android:layout_marginStart="35dp"
        app:layout_constraintTop_toBottomOf="@id/tvPercentage"
        app:layout_constraintEnd_toStartOf="@id/etPercentage"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flatBtn1_add"
        android:layout_marginTop="15dp"
        app:fabSize="mini"
        android:layout_marginStart="377dp"
        app:srcCompat="@drawable/ic_add_black"
        app:layout_constraintTop_toBottomOf="@id/tvPercentage"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etPercentage"/>

    <TextView
        android:id="@+id/tvDividends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dividends"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/etDividends"
        app:layout_constraintTop_toBottomOf="@id/etPercentage"
        app:layout_constraintStart_toStartOf="@+id/tvPercentage"/>

    <EditText
        android:id="@+id/etDividends"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_margin="17dp"
        android:text="@string/default_value"
        android:layout_marginTop="15dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:padding="5dp"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDividends"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:fabSize="mini"
        android:id="@+id/flatBtn2_remove"
        app:srcCompat="@drawable/ic_remove_black"
        android:layout_marginStart="35dp"
        app:layout_constraintTop_toBottomOf="@id/tvDividends"
        app:layout_constraintEnd_toStartOf="@id/etDividends"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:fabSize="mini"
        android:id="@+id/flatBtn2_add"
        android:layout_marginStart="377dp"
        app:srcCompat="@drawable/ic_add_black"
        app:layout_constraintTop_toBottomOf="@id/tvDividends"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etDividends"/>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/background"
        android:text="@string/calculate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDividends" />

    <View
        android:id="@+id/viewContainer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="35dp"
        android:background="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalc"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>