<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvInput1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black"
        android:text="@string/input1_1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
    <TextView
        android:id="@+id/tvType"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/type"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_margin="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInput1" />
    <TextView
        android:id="@+id/tvValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/value"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvType" />
    <TextView
        android:id="@+id/tvDividends_1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:layout_margin="20dp"
        android:text="@string/dividends_1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvValue" />

    <TextView
        android:id="@+id/tvInput2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvType2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvInput1"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"/>

    <TextView
        android:id="@+id/tvType2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:layout_marginTop="17dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvType"
        app:layout_constraintTop_toBottomOf="@+id/tvInput2"/>
    <TextView
        android:id="@+id/tvValue2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:layout_marginTop="17dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvValue"
        app:layout_constraintTop_toBottomOf="@+id/tvType2"/>
    <TextView
        android:id="@+id/tvDividends2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:layout_marginTop="17dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDividends_1"
        app:layout_constraintTop_toBottomOf="@+id/tvValue2"/>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/tvDividends_1"
        app:layout_constraintTop_toBottomOf="@id/tvDividends_1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="@+id/tvTotal"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal"/>
        <TextView
            android:id="@+id/tvTotalValue"
            android:layout_width="70dp"
            android:text="ljhg;khlknlj"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@id/card1"
            app:layout_constraintTop_toTopOf="@id/card1"
            app:layout_constraintEnd_toEndOf="@id/card1"
            app:layout_constraintStart_toStartOf="@+id/card1"/>
    <TextView
        android:id="@+id/tvPre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_dividend"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/tvTotal"
        app:layout_constraintTop_toBottomOf="@id/card1" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="@+id/tvPre"
        app:layout_constraintTop_toBottomOf="@+id/tvPre"/>
    <TextView
        android:id="@+id/tvPreValue"
        android:layout_width="70dp"
        android:text=""
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/card2"
        app:layout_constraintTop_toTopOf="@id/card2"
        app:layout_constraintEnd_toEndOf="@id/card2"
        app:layout_constraintStart_toStartOf="@+id/card2"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card2" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>